<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#C4E1A3">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_patient_first_name"
        android:id="@+id/fname"
        android:textSize="20sp"
        android:background="@drawable/editbg"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints=""
        android:inputType=""
        tools:targetApi="o"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_patient_last_name"
        android:id="@+id/lname"
        android:textSize="20sp"
        android:background="@drawable/editbg"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints=""
        android:inputType=""
        tools:targetApi="o"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_department"
        android:id="@+id/dept"
        android:textSize="20sp"
        android:background="@drawable/editbg"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorPrimary"
        android:inputType=""
        android:autofillHints=""
        tools:targetApi="o"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_no"
        android:id="@+id/room"
        android:textSize="20sp"
        android:background="@drawable/editbg"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorPrimary"
        android:inputType=""
        android:autofillHints=""
        tools:targetApi="o"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add"
        android:id="@+id/addptn"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>

</LinearLayout>